--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
    
     <!-- Stylesheet -->
     <link rel="shortcut icon" href="favicon.ico">  
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">   
     <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="assets/plugins/github-calendar/dist/github-calendar.css"/>
@@ -168,7 +168,7 @@
                             <hr class="divider" /> -->
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="#" target="_blank">
-                                <img class="img-responsive project-image" src="assets/images/projects/spoofmail_front.png" alt="Spoofmail" />
+                                <img class="img-responsive project-image" src="assets/images/projects/Spoofmail_front.png" alt="Spoofmail" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="#" target="_blank">Spoofmail - Web Application</a></h3>
