--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <li class="last-item"><a href="#"><i class="fa fa-stack-overflow"></i></a></li>               
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="mailto:niels.bekkers@skynet.be?Subject=Question" target="_top"><i class="fa fa-paper-plane"></i> Contact Me</a>              
+            <a class="btn btn-cta-primary pull-right" href="form.html" target="_top"><i class="fa fa-paper-plane"></i> Contact Me</a>              
         </div><!--//container-->
     </header><!--//header-->
     
