--- a/form.html
+++ b/form.html
@@ -8,6 +8,8 @@
 <link rel="shortcut icon" href="" hreflang="en-us">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/main.css" hreflang="en-us">
 
 </head>
@@ -15,7 +17,7 @@
   <div id="particles-js"></div>
 <div class="text-container">
   <div class="text">
-    <h1>Get In Touch</h1><hr/><br/>
+    <h1><u>Get In Touch</u></h1><br/>
     <p>Have a sweet project in mind or just want to say hi? <br/>Feel free to send me a message!</p><br/>
     <form method="POST" action="https://formspree.io/niels.bekkers@skynet.be" name="sentMessage" id="contactForm">
     	<table>
@@ -28,7 +30,7 @@
     			<td colspan="2"><textarea rows="4" cols="74" placeholder="Message" required="required"></textarea></td>
     		</tr>
     		<tr>
-    			<td colspan="2"><br/><a href="javascript:{}" onclick="document.getElementById('contactForm').submit();" value="Send">Submit &nbsp;🚀</a></td>
+    			<td colspan="2"><br/><button type="submit" class="btn btn-success">Submit &nbsp;&nbsp;<i class="fa fa-rocket" aria-hidden="true"></i></button></td>
     		</tr>
     	</table>
     	
