About me updated

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p><b>I'm a last year student at UC Leuven-Limburg</b> in Diepenbeek studying information and communication technology.
+                            <p>I'm currently working as a software developer at <b>Planet Of Commerce in Hasselt</b>, Building custom software on top of the <b>Salesforce Commerce Cloud</b>.
             I have experience developing and designing software programs. I strive to create software that not only functions efficiently under the hood, but also provides intuitive, pixel-perfect user experiences.<br/><br/>
             As I always saying <i>"A user interface is like a joke. If you have to explain it, it's not that good"</i>.
             I love learning new and better ways to create seamless user experiences with clean, efficient, and scalable code. 
