Work experience updated

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
+                                <h3 class="title">Software Developer - <span class="place"><a href="http://www.planetofcommerce.com">Planet Of Commerce</a></span> <span class="year">(2018 - ...)</span></h3>
+                                <p> As a Software Developer for Planet Of Commerce I am responsible for creating custom software built on top of Salesforce Commerce Cloud, an E-Commerce solution for large retailers. With Salesforce we enable retailers to create and coordinate shoppers' online experiences and create personalized, intelligent shopper journeys, wherever shoppers roam across mobile, social, digital and store.</p>
+                            </div><!--//item-->
+                            <div class="item">
                                 <h3 class="title">Internship - <span class="place"><a href="http://www.lighting.philips.com/home">Philips Lighting</a></span> <span class="year">(2017 - 2018)</span></h3>
                                 <p>During my internship I will be part of the global Philips Hue product management team, responsible for enhancing the Hue Lighting experience and provide new exciting use cases to our consumers. I will contribute to the vision, strategy and product roadmap by creating tools and strategies to deal with large and diverse sets of data. My assignment will be to develop supporting tools for the product management team that enables them to quickly review and analyse their portfolio.</p><a class="more-link" href="#internshipPhilips"><i class="fa fa-arrow-right"></i> Look at my project</a></p>
                             </div><!--//item-->
