--- a/index.html
+++ b/index.html
@@ -415,6 +415,8 @@
                                 <li><i class="fa fa-arrow-right"></i> <a href="https://jenkins.io/" target="_blank">Jenkins</a></li>
                                 <li><i class="fa fa-arrow-right"></i> <a href="https://www.sourcetreeapp.com/" target="_blank">SourceTree</a></li>
                                 <li><i class="fa fa-arrow-right"></i> <a href="https://www.adobe.com/Photoshop" target="_blank">Photoshop</a></li>
+                                <li><i class="fa fa-arrow-right"></i> <a href="https://www.gitkraken.com" target="_blank">GitKraken</a></li>
+                                <li><i class="fa fa-arrow-right"></i> <a href="https://code.visualstudio.com" target="_blank">Visual Studio Code</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
