Social Links Updated

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                 <ul class="social list-inline">
                     <li><a href="https://www.facebook.com/niels.bekkers.01"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://twitter.com/BekkersNiels"><i class="fa fa-twitter"></i></a></li>                   
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="https://plus.google.com/103473484121414438620"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="https://be.linkedin.com/in/niels-bekkers-65a809bb"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://www.instagram.com/nielsbekkers/"><i class="fa fa-instagram"></i></a></li>
                     <li><a href="https://github.com/nielsbekkers"><i class="fa fa-github"></i></a></li>
-                    <li class="last-item"><a href="#"><i class="fa fa-stack-overflow"></i></a></li>               
+                    <li class="last-item"><a href="https://stackexchange.com/users/12521235/niels-bekkers"><i class="fa fa-stack-overflow"></i></a></li>
                 </ul> 
             </div><!--//profile-->
             <a class="btn btn-cta-primary pull-right" href="form.html" target="_top"><i class="fa fa-paper-plane"></i> Contact Me</a>              
