--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title">Software Developer - <span class="place"><a href="http://www.planetofcommerce.com">Planet Of Commerce</a></span> <span class="year">(2018 - ...)</span></h3>
-                                <p> As a Software Developer for Planet Of Commerce I am responsible for creating custom software built on top of Salesforce Commerce Cloud, an E-Commerce solution for large retailers. With Salesforce we enable retailers to create and coordinate shoppers' online experiences and create personalized, intelligent shopper journeys, wherever shoppers roam across mobile, social, digital and store.</p>
+                                <p> As a Software Developer for Planet Of Commerce I am responsible for creating custom software built on top of Salesforce Commerce Cloud, an E-Commerce solution for large retailers. With Salesforce we enable retailers to create and coordinate shoppers' online experiences and create personalized, intelligent shopper journeys, wherever shoppers roam across mobile, social, digital and store. <i>"Build a better shopping journey for your customers - from discovery to delivery, online or in the store."</i></p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Internship - <span class="place"><a href="http://www.lighting.philips.com/home">Philips Lighting</a></span> <span class="year">(2017 - 2018)</span></h3>
