http to https + sitemap added

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
     <!-- HTTP to HTTPS -->
     <script>
-        /*if(window.location.protocol != 'https:' && window.location.hostname=='www.nielsbekkers.be') {
+        if(window.location.protocol != 'https:' && window.location.hostname=='www.nielsbekkers.be') {
                 location.href = location.href.replace("http://", "https://"); 
         }
         if(window.location.href.indexOf('www') == -1) {
             window.location.href = 'https://www.nielsbekkers.be';
-        }*/
+        }
     </script>
 
     
@@ -105,8 +105,8 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I'm currently working as a software developer at <b>Planet Of Commerce in Hasselt</b>, Building custom software on top of the <b>Salesforce Commerce Cloud</b>.
-            I have experience developing and designing software programs. I strive to create software that not only functions efficiently under the hood, but also provides intuitive, pixel-perfect user experiences.<br/><br/>
+                            <p>I'm currently working as a software developer at <b>Planet Of Commerce in Hasselt</b>, Building custom software on top of <b>Salesforce Commerce Cloud</b>.
+            I have experience in developing and designing software programs. I strive to create software that not only functions efficiently under the hood, but also provides intuitive, pixel-perfect user experiences.<br/><br/>
             As I always saying <i>"A user interface is like a joke. If you have to explain it, it's not that good"</i>.
             I love learning new and better ways to create seamless user experiences with clean, efficient, and scalable code. 
             I consider work an ongoing education, and I'm always looking for opportunities to work with those who are willing to share their knowledge as much as I want to learn. 
