--- a/index.html
+++ b/index.html
@@ -461,6 +461,17 @@
         })();
     </script>
     <!--End of Tawk.to Script-->
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92658136-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-92658136-1');
+    </script>
+
 </body>
 </html> 
 
