--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
 </head>
 <body class="four-oh-four">
   <div id="particles-js"></div>
-<div class="text-container">
+<!--<div class="text-container">
   <div class="text">
     <h1><u>Get In Touch</u></h1><br/>
     <p>Have a sweet project in mind or just want to say hi? <br/>Feel free to send me a message!</p><br/>
@@ -33,15 +33,51 @@
     			<td colspan="2"><br/><button type="submit" class="btn btn-success">Submit &nbsp;&nbsp;<i class="fa fa-rocket" aria-hidden="true"></i></button></td>
     		</tr>
     	</table>
-    	
+
     </form>
-    
+
   </div>
-</div>
+</div>-->
+  <div class="container">
+	  <h1><u>Get In Touch</u></h1><br/>
+	  <p>Have a sweet project in mind or just want to say hi? <br/>Feel free to send me a message!</p><br/>
+	  <form class="well span8" method="POST" action="https://formspree.io/niels.bekkers@skynet.be">
+		  <div class="row">
+			  <div class="span3">
+				  <label>First Name</label>
+				  	<input class="span3" name="name" placeholder="Your First Name" type="text" required="required">
+				  <label>Email Address</label>
+				  	<input class="span3" name="email" placeholder="Your email address" type="text">
+				  <label>Subject</label>
+					  <select class="span3" id="subject" name="subject">
+						  <option selected value="na">
+							  Choose One:
+						  </option>
+
+						  <option value="service">
+							  General Customer Service
+						  </option>
+
+						  <option value="suggestions">
+							  Suggestions
+						  </option>
+
+						  <option value="product">
+							  Product Support
+						  </option>
+					  </select>
+			  </div>
+
+			  <div class="span5">
+				  <label>Message</label>
+				  <textarea class="input-xlarge span5" id="message" name="message" rows="10"></textarea>
+			  </div>
+			  <button class="btn btn-primary pull-right" type="submit">Send</button>
+		  </div>
+	  </form>
+  </div>
 <div class="count-particles"><span class="js-count-particles">--</span> particles </div>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
 <script src="assets/js/particles.js"></script>
