--- a/form.html
+++ b/form.html
@@ -38,7 +38,8 @@
 
   </div>
 </div>-->
-  <div class="container">
+  <div class="text-container">
+	  <div class="text">
 	  <h1><u>Get In Touch</u></h1><br/>
 	  <p>Have a sweet project in mind or just want to say hi? <br/>Feel free to send me a message!</p><br/>
 	  <form class="well span8" method="POST" action="https://formspree.io/niels.bekkers@skynet.be">
@@ -75,6 +76,7 @@
 			  <button class="btn btn-primary pull-right" type="submit">Send</button>
 		  </div>
 	  </form>
+  </div>
   </div>
 <div class="count-particles"><span class="js-count-particles">--</span> particles </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
