--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
 
 </head>
 <body class="four-oh-four">
-  <div id="particles-js"></div>
+  <!--<div id="particles-js"></div>-->
 <!--<div class="text-container">
   <div class="text">
     <h1><u>Get In Touch</u></h1><br/>
@@ -38,8 +38,7 @@
 
   </div>
 </div>-->
-  <div class="text-container">
-	  <div class="text">
+  <div class="container">
 	  <h1><u>Get In Touch</u></h1><br/>
 	  <p>Have a sweet project in mind or just want to say hi? <br/>Feel free to send me a message!</p><br/>
 	  <form class="well span8" method="POST" action="https://formspree.io/niels.bekkers@skynet.be">
@@ -77,7 +76,7 @@
 		  </div>
 	  </form>
   </div>
-  </div>
+
 <div class="count-particles"><span class="js-count-particles">--</span> particles </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
