--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                     <li class="last-item"><a href="https://stackexchange.com/users/12521235/niels-bekkers"><i class="fa fa-stack-overflow"></i></a></li>
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="form.html" target="_top"><i class="fa fa-paper-plane"></i> Contact Me</a>              
+            <a class="btn btn-cta-primary pull-right" href="form.html" target="_top"><i class="fa fa-paper-plane"></i> Contact Me</a>
+            <span class="tooltiptext">Check out my new chat service!</span>
         </div><!--//container-->
     </header><!--//header-->
     
