Contact method changed

--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                     <li class="last-item"><a href="https://stackexchange.com/users/12521235/niels-bekkers"><i class="fa fa-stack-overflow"></i></a></li>
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="form.html" target="_top"><i class="fa fa-paper-plane"></i> Contact Me</a>
-            <span class="tooltiptext">Check out my new chat service!</span>
+            <a class="btn btn-cta-primary pull-right" href="javascript:void(Tawk_API.toggle())" target="_top"><i class="fa fa-paper-plane"></i> Contact Me</a>
         </div><!--//container-->
     </header><!--//header-->
     
