instagram feed added

--- a/index.html
+++ b/index.html
@@ -421,6 +421,15 @@
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
+
+                <aside class="list conferences aside section">
+                    <div class="section-inner">
+                        <h2 class="heading">Toolkit</h2>
+                        <div class="content">
+                            <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/94afe1971ef753ca9a0e9905ce66ffbc.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+                        </div><!--//content-->
+                    </div><!--//section-inner-->
+                </aside><!--//section-->
               
             </div><!--//secondary-->    
         </div><!--//row-->
