--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     <div class="section-inner">
                         <h2 class="heading">Toolkit</h2>
                         <div class="content">
-                            <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/94afe1971ef753ca9a0e9905ce66ffbc.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+                            <div id="instafeed"></div>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
@@ -479,6 +479,13 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-92658136-1');
+    </script>
+
+    <script type="text/javascript">
+        var feed = new Instafeed({
+            clientId: '2b50f868ab98423da3f0b8637deda171'
+        });
+        feed.run();
     </script>
 
 </body>
