--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
         }
     </script>
 
+    <script type="text/javascript">
+        var feed = new Instafeed({
+            clientId: '2b50f868ab98423da3f0b8637deda171'
+        });
+        feed.run();
+    </script>
+
     
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -424,7 +431,7 @@
 
                 <aside class="list conferences aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Toolkit</h2>
+                        <h2 class="heading">Instagram</h2>
                         <div class="content">
                             <div id="instafeed"></div>
                         </div><!--//content-->
@@ -479,13 +486,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-92658136-1');
-    </script>
-
-    <script type="text/javascript">
-        var feed = new Instafeed({
-            clientId: '2b50f868ab98423da3f0b8637deda171'
-        });
-        feed.run();
     </script>
 
 </body>
