instafeed tag added

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         }
     </script>
 
+    <script type="text/javascript" src="assets/js/instafeed.min.js"></script>
     <script type="text/javascript">
         var feed = new Instafeed({
             clientId: '2b50f868ab98423da3f0b8637deda171'
