--- a/index.html
+++ b/index.html
@@ -65,17 +65,10 @@
 
     <script type="text/javascript" src="assets/js/instafeed.min.js"></script>
     <script type="text/javascript">
-        var feed = new Instafeed({
-            clientId: '2b50f868ab98423da3f0b8637deda171',
-            target: 'instafeed'
-        });
-        feed.run();
-    </script>
-    <script type="text/javascript">
         var userFeed = new Instafeed({
-            clientId: '2b50f868ab98423da3f0b8637deda171',
             get: 'user',
-            userId: '261887136'
+            userId: '261887136',
+            accessToken: '261887136.1677ed0.7806e0f7028c452eae12249065b6aac7'
         });
         userFeed.run();
     </script>
