instagram accessToken updated

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         var userFeed = new Instafeed({
             get: 'user',
             userId: '261887136',
-            accessToken: '261887136.1677ed0.7806e0f7028c452eae12249065b6aac7'
+            accessToken: '39e59cb7057d47fd9d1c7193484fb18d'
         });
         userFeed.run();
     </script>
