--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         var userFeed = new Instafeed({
             get: 'user',
             userId: '261887136',
-            accessToken: '39e59cb7057d47fd9d1c7193484fb18d'
+            accessToken: '39e59cb7057d47fd9d1c7193484fb18d',
+            limit: 6
         });
         userFeed.run();
     </script>
