instagram userID updated

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <script type="text/javascript" src="assets/js/instafeed.min.js"></script>
     <script type="text/javascript">
         var userFeed = new Instafeed({
+            client: '2b50f868ab98423da3f0b8637deda171',
             get: 'user',
             userId: '261887136',
-            accessToken: '39e59cb7057d47fd9d1c7193484fb18d',
             limit: 6
         });
         userFeed.run();
