access token updated

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <script type="text/javascript" src="assets/js/instafeed.min.js"></script>
     <script type="text/javascript">
         var userFeed = new Instafeed({
-            client: '2b50f868ab98423da3f0b8637deda171',
             get: 'user',
             userId: '261887136',
+            accessToken: '261887136.1677ed0.7806e0f7028c452eae12249065b6aac7',
             limit: 6
         });
         userFeed.run();
