--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 
                 <aside class="list conferences aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Instagram</h2>
+                        <h2 class="heading">Instagram Live Feed</h2>
                         <div class="content">
                             <div id="instafeed"></div>
                         </div><!--//content-->
