Work, projects and skills update

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I'm currently working as a software developer at <b>Planet Of Commerce in Hasselt</b>, Building custom software on top of <b>Salesforce Commerce Cloud</b>.
-            I have experience in developing and designing software programs. I strive to create software that not only functions efficiently under the hood, but also provides intuitive, pixel-perfect user experiences.<br/><br/>
+                            <p>I'm currently working as a software developer at <b>Forward in Hasselt</b>, Building custom software on top of <b>Salesforce Commerce Cloud</b>.
+            I have experience in developing and designing custom software programs. I strive to create software that not only functions efficiently under the hood, but also provides intuitive, pixel-perfect user experiences.<br/><br/>
             As I always saying <i>"A user interface is like a joke. If you have to explain it, it's not that good"</i>.
             I love learning new and better ways to create seamless user experiences with clean, efficient, and scalable code. 
             I consider work an ongoing education, and I'm always looking for opportunities to work with those who are willing to share their knowledge as much as I want to learn. 
@@ -134,16 +134,21 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Software Developer - <span class="place"><a href="http://www.planetofcommerce.com">Planet Of Commerce</a></span> <span class="year">(2018 - ...)</span></h3>
-                                <p> As a Software Developer for Planet Of Commerce I am responsible for creating custom software built on top of Salesforce Commerce Cloud, an E-Commerce solution for large retailers. With Salesforce we enable retailers to create and coordinate shoppers' online experiences and create personalized, intelligent shopper journeys, wherever shoppers roam across mobile, social, digital and store. <i>&#8220;Build a better shopping journey for your customers - from discovery to delivery, online or in the store.&#8221;</i><br/><br/><b><u>Projects:</u></b><br/>
+                                <h3 class="title">Software Developer - <span class="place"><a href="http://www.forward.eu">Forward</a></span> <span class="year">(2018 - ...)</span></h3>
+                                <p> With Salesforce we enable retailers to create and coordinate shoppers' online experiences and create personalized, intelligent shopper journeys, wherever shoppers roam across mobile, social, digital and store. <i>&#8220;Build a better shopping journey for your customers - from discovery to delivery, online or in the store.&#8221;</i> <br/><br/>As a Software Developer for Forward I am responsible for back-end integrations, build custom software on top of Salesforce and help to translate pixel perfect designs into code. Working close together with our clients is our key to success. My goal is to keep our clients satisfied and provide technical feedback if necessary.<br/><br/><b><u>Projects:</u></b><br/>
                                     <ul>
-                                        <li>Brantano &nbsp;&nbsp;<a href="https://www.brantano.be" target="_blank"><i class="fa fa-external-link"></i></a></li>
+                                        <li><a href="https://www.brantano.be" target="_blank">Brantano.be</a></li>
+                                        <li><a href="https://www.brantano.be/nl/personal-styling/" target="_blank">Hellow.me</a> -> Brantano styling service</li>
+                                        <li><a href="https://www.cks-fashion.com" target="_blank">CKS Fashion</a></li>
+                                        <li><a href="https://www.fredginger.com/nl-be/home" target="_blank">Fred & Ginger</a></li>
+                                        <li><a href="https://www.misse.de" target="_blank">MissE.de</a></li>
+                                        <li><a href="https://www.missetam.nl" target="_blank">MissEtam.nl</a></li>
                                     </ul>
                                 </p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Internship - <span class="place"><a href="http://www.lighting.philips.com/home">Philips Lighting</a></span> <span class="year">(2017 - 2018)</span></h3>
-                                <p>During my internship I will be part of the global Philips Hue product management team, responsible for enhancing the Hue Lighting experience and provide new exciting use cases to our consumers. I will contribute to the vision, strategy and product roadmap by creating tools and strategies to deal with large and diverse sets of data. My assignment will be to develop supporting tools for the product management team that enables them to quickly review and analyse their portfolio.</p><a class="more-link" href="#internshipPhilips"><i class="fa fa-arrow-right"></i> Look at my project</a></p>
+                                <p>During my internship I was part of the global Philips Hue product management team, responsible for enhancing the Hue Lighting experience and provide new exciting use cases to our consumers. I contributed to the vision, strategy and product roadmap by creating tools and strategies to deal with large and diverse sets of data. My assignment was to create supporting tools for the product management team that enables them to quickly review and analyse their portfolio.</p><a class="more-link" href="#internshipPhilips"><i class="fa fa-arrow-right"></i> Look at my project</a></p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Support R&D Lab - <span class="place"><a href="https://www.ilumen.be/en/">iLumen BVBA</a></span> <span class="year">(2013 - 2014)</span></h3>
@@ -290,7 +295,7 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Koersel, BE</li>
-                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:niels.bekkers@skynet.be?Subject=Question" target="_top">niels.bekkers@skynet.be</a></li>
+                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:niels.bekkers@outlook.com?Subject=Question" target="_top">niels.bekkers@outlook.com</a></li>
                                 <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="https://www.nielsbekkers.be" target="_blank">https://www.nielsbekkers.be</a></li>
                             </ul>
                         </div><!--//content-->  
@@ -305,15 +310,7 @@
                             <div class="skillset">
 
                                 <div class="item">
-                                    <h3 class="level-title">HTML5, CSS3, PHP<span class="level-label">Pro</span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="90%">
-                                        </div>                                      
-                                    </div><!--//level-bar-->                                 
-                                </div><!--//item-->
-                                
-                                <div class="item">
-                                    <h3 class="level-title">Javascript &amp; jQuery<span class="level-label">Pro</span></h3>
+                                    <h3 class="level-title">Javascript Frameworks <span class="level-label">Pro</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="90%">
                                         </div>                                      
@@ -321,25 +318,9 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">ASP.Net<span class="level-label">Advanced</span></h3>
+                                    <h3 class="level-title">HTML5, SASS, LESS<span class="level-label">Pro</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="60%">
-                                        </div>                                      
-                                    </div><!--//level-bar-->                                 
-                                </div><!--//item-->
-
-                                <div class="item">
-                                    <h3 class="level-title">Python<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Advanced</span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="70%">
-                                        </div>                                      
-                                    </div><!--//level-bar-->                                 
-                                </div><!--//item-->
-                                
-                                <div class="item">
-                                    <h3 class="level-title">C#<span class="level-label">Pro</span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="70%">
+                                        <div class="level-bar-inner" data-level="90%">
                                         </div>                                      
                                     </div><!--//level-bar-->                                 
                                 </div><!--//item-->
@@ -353,9 +334,41 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">NoSQL<span class="level-label">Pro</span></h3>
+                                    <h3 class="level-title">Python<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Advanced</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="85%">
+                                        <div class="level-bar-inner" data-level="70%">
+                                        </div>                                      
+                                    </div><!--//level-bar-->                                 
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">PHP Frameworks<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Advanced</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="70%">
+                                        </div>                                      
+                                    </div><!--//level-bar-->                                 
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">NoSQL<span class="level-label">Advanced</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="70%">
+                                        </div>                                      
+                                    </div><!--//level-bar-->                                 
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">C#<span class="level-label">Advanced</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="70%">
+                                        </div>                                      
+                                    </div><!--//level-bar-->                                 
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">ASP.Net<span class="level-label">Intermediate</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="50%">
                                         </div>                                      
                                     </div><!--//level-bar-->                                 
                                 </div><!--//item-->
@@ -400,7 +413,7 @@
                                 </li><!--//item-->
                                 <li class="item">
                                     <span class="title"><strong>English:</strong></span>
-                                    <span class="level">Professional <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-half"></i></span>
+                                    <span class="level">Professional <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-half"></i></span>
                                 </li><!--//item-->
                                 <li class="item">
                                     <span class="title"><strong>French:</strong></span>
@@ -463,7 +476,12 @@
     <!-- ******FOOTER****** --> 
     <footer class="footer">
         <div class="container text-center">
-                <small class="copyright">Graphics designed with <a href="http://themes.3rdwavemedia.com" target="_blank"> <i class="fa fa-heart"></i> </a> for developers</small>
+                <small class="copyright">
+                    ©
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script> - Niels Bekkers
+                </small>
         </div><!--//container-->
     </footer><!--//footer-->
  
