Travel page: loader icon added

--- a/australie/index.html
+++ b/australie/index.html
@@ -47,6 +47,7 @@
                     <span class="card__category"> Australie</span>
                     <h3 class="card__title">Live Map</h3>
                     <span class="card__by">by <a href="#" class="card__author" title="author">Niels Bekkers</a></span>
+                    <span class="loader-icon"><img src="location.gif" width="25" height="25"/></span>
                 </div>
             </article>  
 
