--- a/australie/index.html
+++ b/australie/index.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <!-- HTTP to HTTPS -->
         <script>
-            if(window.location.protocol != 'https:' && window.location.hostname=='www.nielsbekkers.be/australie') {
+            if(window.location.protocol != 'https:' && window.location.hostname=='www.nielsbekkers.be/australie/') {
                     location.href = location.href.replace("http://", "https://"); 
             }
             if(window.location.href.indexOf('www') == -1) {
-                window.location.href = 'https://www.nielsbekkers.be/australie';
+                window.location.href = 'https://www.nielsbekkers.be/australie/';
             }
         </script>
         <!-- Bootstrap CSS -->
