--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="favicon.ico">
 
     <!-- Open Graph -->
     <meta property="og:description" content="Software Developer & Webdesigner" />
